# papyro

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
assets/: editor.js  main.css
assets/styles/: markdown.css  modal.css  tiptap-chrome-base.css  tiptap-chrome-block.css  tiptap-chrome-code.css  tiptap-chrome-command.css  tiptap-chrome-table.css  tiptap-chrome.css
crates/editor/: Cargo.toml
crates/editor/src/parser/: outline.rs
crates/editor/src/renderer/: html.rs
docs/: README.md  app-icons.md  architecture.md  development-standards.md  editor.md  markdown-style-references.md  roadmap.md  theme-system.md  tiptap-enterprise-editor-todo.md  tiptap-migration-plan.md  tiptap-official-react-strategy.md  tiptap-react-runtime-plan.md  tiptap-refactor-plan.md  tiptap-release-smoke.md  ui-architecture.md  ui-design-qa.md  ui-surface-audit.md
docs/zh-CN/: README.md  app-icons.md  architecture.md  development-standards.md  editor.md  markdown-style-references.md  roadmap.md  theme-system.md  tiptap-enterprise-editor-todo.md  tiptap-migration-plan.md  tiptap-official-react-strategy.md  tiptap-react-runtime-plan.md  tiptap-refactor-plan.md  tiptap-release-smoke.md  ui-architecture.md
js/: build.js  package-lock.json  package.json  tsconfig.json
js/src/: editor-clipboard.js  editor-clipboard.ts  editor-entry.ts  editor-host-runtime.ts  editor-registry.js  editor-runtime-bootstrap.js  editor-runtime.ts  (+59 more)
scripts/: check-desktop-resource-smoke.js  check-desktop-tiptap-webview-smoke.js  check-editor-markdown-gate.js  check-markdown-style-smoke.js  check-tiptap-release-smoke.js  check-tiptap-runtime-smoke.js  check-tiptap-theme-bridge.js  check.ps1  check.sh  generate-app-icons.ps1  report-file-lines.js  report-ui-tokens.js
(+223 files in other folders)
