[package]
name = "papyro-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
papyro-core = { path = "../core" }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
syntect = { workspace = true }
ammonia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
